--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?426517801"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3948746906"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?418394992" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3870366586"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?80221687" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -29,66 +29,158 @@ var __adobewebfontsappname__ = "muse";
  <body>
 
   <div class="clearfix" id="page"><!-- column -->
-   <div class="clearfix colelem" id="ppu459"><!-- group -->
-    <div class="clearfix grpelem" id="pu459"><!-- group -->
-     <div class="rgba-background clearfix grpelem" id="u459"><!-- group -->
-      <div class="clip_frame grpelem" id="u460"><!-- image -->
-       <img class="block" id="u460_img" src="images/goodreads_icon_30x30.png" alt="" width="30" height="30"/>
+   <div class="position_content" id="page_position_content">
+    <div class="colelem" id="u977"><!-- simple frame --></div>
+    <div class="clearfix pinned-colelem" id="u978"><!-- group -->
+     <div class="clearfix" id="u903"><!-- group -->
+      <div id="u902"><!-- simple frame --></div>
+      <nav class="MenuBar clearfix" id="menuu873"><!-- horizontal box -->
+       <div class="MenuItemContainer clearfix grpelem" id="u881"><!-- vertical box -->
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u882" href="index.html#matthew"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u884-4"><!-- content --><p>Matthew</p></div></a>
+       </div>
+       <div class="MenuItemContainer clearfix grpelem" id="u874"><!-- vertical box -->
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u877" href="index.html#novels"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u878-4"><!-- content --><p>Novels</p></div></a>
+       </div>
+       <div class="MenuItemContainer clearfix grpelem" id="u888"><!-- vertical box -->
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u889" href="index.html#media"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u891-4"><!-- content --><p>Media</p></div></a>
+       </div>
+      </nav>
+      <a class="nonblock nontext clip_frame" id="u897" href="https://www.facebook.com/TheShadeBook?pnref=lhc"><!-- image --><img class="block" id="u897_img" src="images/fb-f-logo__blue_50.png" alt="" width="40" height="40"/></a>
+      <a class="nonblock nontext clip_frame" id="u895" href="https://www.goodreads.com/author/show/7847803.Matthew_Tallman"><!-- image --><img class="block" id="u895_img" src="images/goodreads_icon_30x30.png" alt="" width="40" height="40"/></a>
+      <div class="clip_frame" id="u899"><!-- image -->
+       <img class="block" id="u899_img" src="images/mail.jpg" alt="" width="39" height="39"/>
       </div>
      </div>
-     <div class="clearfix grpelem" id="u466-4"><!-- content -->
-      <p>GOODREADS</p>
-     </div>
-     <a class="nonblock nontext grpelem" id="u480" href="https://www.goodreads.com/author/show/7847803.Matthew_Tallman"><!-- simple frame --></a>
     </div>
-    <div class="rgba-background clearfix grpelem" id="u449"><!-- group -->
-     <div class="clip_frame grpelem" id="u440"><!-- image -->
-      <img class="block" id="u440_img" src="images/fb-f-logo__blue_29.png" alt="" width="29" height="29"/>
-     </div>
-     <div class="clearfix grpelem" id="u450-4"><!-- content -->
-      <p>FACEBOOK</p>
-     </div>
-    </div>
-    <a class="nonblock nontext grpelem" id="u479" href="https://www.facebook.com/TheShadeBook?pnref=lhc"><!-- simple frame --></a>
-   </div>
-   <div class="rgba-background rounded-corners clearfix colelem" id="u481"><!-- group -->
-    <div class="clip_frame grpelem" id="u482"><!-- image -->
-     <img class="block" id="u482_img" src="images/icon.png" alt="" width="101" height="101"/>
-    </div>
-    <nav class="MenuBar clearfix grpelem" id="menuu240"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u248"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u251" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u253" alt="Home" src="images/blank.gif"/><!-- state-based BG images --></a>
-     </div>
-     <div class="MenuItemContainer clearfix grpelem" id="u241"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u244" href="the-shade-trilogy.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u245" alt="The Shade Trilogy" src="images/blank.gif"/><!-- state-based BG images --></a>
-      <div class="SubMenu  MenuLevel1 clearfix" id="u242"><!-- vertical box -->
-       <ul class="SubMenuView shadow rgba-background clearfix colelem" id="u243"><!-- vertical box -->
-        <li class="MenuItemContainer clearfix colelem" id="u332"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u333" href="the-shade.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u335-4"><!-- rasterized frame --><div id="u335-4_clip"><img id="u335-4_img" alt="The Shade" width="108" height="33" src="images/u335-4.png"/></div></div></a></li>
-        <li class="MenuItemContainer clearfix colelem" id="u344"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u345" href="the-corrupt.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u347-4"><!-- rasterized frame --><div id="u347-4_clip"><img id="u347-4_img" alt="The Corrupt" width="126" height="33" src="images/u347-4.png"/></div></div></a></li>
-        <li class="MenuItemContainer clearfix colelem" id="u351"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u354" href="the-forgotten.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u356-4"><!-- rasterized frame --><div id="u356-4_clip"><img id="u356-4_img" alt="The Forgotten" width="144" height="33" src="images/u356-4.png"/></div></div></a></li>
-       </ul>
+    <div class="clearfix colelem" id="u907"><!-- group -->
+     <div class="rgba-background clearfix grpelem" id="u938"><!-- group -->
+      <div class="grpelem" id="u937"><!-- simple frame --></div>
+      <nav class="MenuBar clearfix grpelem" id="menuu908"><!-- horizontal box -->
+       <div class="MenuItemContainer clearfix grpelem" id="u916"><!-- vertical box -->
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u917" href="index.html#matthew"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u919-4"><!-- content --><p>Matthew</p></div></a>
+       </div>
+       <div class="MenuItemContainer clearfix grpelem" id="u909"><!-- vertical box -->
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u912" href="index.html#novels"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u913-4"><!-- content --><p>Novels</p></div></a>
+       </div>
+       <div class="MenuItemContainer clearfix grpelem" id="u923"><!-- vertical box -->
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u924" href="index.html#media"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u926-4"><!-- content --><p>Media</p></div></a>
+       </div>
+      </nav>
+      <a class="nonblock nontext clip_frame grpelem" id="u932" href="https://www.facebook.com/TheShadeBook?pnref=lhc"><!-- image --><img class="block" id="u932_img" src="images/fb-f-logo__blue_50.png" alt="" width="40" height="40"/></a>
+      <a class="nonblock nontext clip_frame grpelem" id="u930" href="https://www.goodreads.com/author/show/7847803.Matthew_Tallman"><!-- image --><img class="block" id="u930_img" src="images/goodreads_icon_30x30.png" alt="" width="40" height="40"/></a>
+      <div class="clip_frame grpelem" id="u934"><!-- image -->
+       <img class="block" id="u934_img" src="images/mail.jpg" alt="" width="39" height="39"/>
       </div>
      </div>
-     <div class="MenuItemContainer clearfix grpelem" id="u313"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u314" href="short-stories.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u316" alt="Short Stories" src="images/blank.gif"/><!-- state-based BG images --></a>
+    </div>
+    <div class="clearfix colelem" id="pu1049"><!-- group -->
+     <div class="shadow grpelem" id="u1049"><!-- simple frame -->
+      <div class="_u1049 f3s_top" id="_u1049-f3s_top"></div>
+      <div class="_u1049 f3s_mid" id="_u1049-f3s_mid"></div>
+      <div class="_u1049 f3s_bot" id="_u1049-f3s_bot"></div>
      </div>
-     <div class="MenuItemContainer clearfix grpelem" id="u275"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u276" href="about-the-author.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u278" alt="About the Author" src="images/blank.gif"/><!-- state-based BG images --></a>
+     <div class="rgba-background clearfix grpelem" id="u778"><!-- group -->
+      <div class="shadow clip_frame grpelem" id="u818"><!-- image -->
+       <img class="block" id="u818_img" src="images/matt-crop.jpg" alt="" width="490" height="406"/>
+      </div>
+      <div class="clearfix grpelem" id="pu670-4"><!-- column -->
+       <div class="clearfix colelem" id="u670-4"><!-- content -->
+        <p>Matthew Tallman</p>
+       </div>
+       <div class="colelem" id="u779"><!-- simple frame --></div>
+      </div>
      </div>
-    </nav>
+     <a class="anchor_item grpelem" id="matthew"></a>
+    </div>
+    <div class="clearfix colelem" id="pu981"><!-- group -->
+     <div class="shadow grpelem" id="u981"><!-- simple frame -->
+      <div class="_u981 f3s_top" id="_u981-f3s_top"></div>
+      <div class="_u981 f3s_mid" id="_u981-f3s_mid"></div>
+      <div class="_u981 f3s_bot" id="_u981-f3s_bot"></div>
+     </div>
+     <div class="shadow grpelem" id="u1050"><!-- simple frame -->
+      <div class="_u1050 f3s_top" id="_u1050-f3s_top"></div>
+      <div class="_u1050 f3s_mid" id="_u1050-f3s_mid"></div>
+      <div class="_u1050 f3s_bot" id="_u1050-f3s_bot"></div>
+     </div>
+     <div class="rgba-background clearfix grpelem" id="u973"><!-- group -->
+      <a class="anchor_item grpelem" id="novels"></a>
+      <div class="clearfix grpelem" id="pu982-4"><!-- column -->
+       <div class="clearfix colelem" id="u982-4"><!-- content -->
+        <p>The Shade Trilogy</p>
+       </div>
+       <div class="shadow clip_frame colelem" id="u989"><!-- image -->
+        <img class="block" id="u989_img" src="images/front%205x8%20300ppi.jpg" alt="" width="190" height="305"/>
+       </div>
+      </div>
+      <div class="clearfix grpelem" id="pu975-4"><!-- column -->
+       <div class="clearfix colelem" id="u975-4"><!-- content -->
+        <p>NOVELS</p>
+       </div>
+       <div class="shadow clip_frame colelem" id="u995"><!-- image -->
+        <img class="block" id="u995_img" src="images/thecorruptfront%205x8%20300ppi.jpg" alt="" width="191" height="305"/>
+       </div>
+      </div>
+      <div class="shadow clip_frame grpelem" id="u1001"><!-- image -->
+       <img class="block" id="u1001_img" src="images/front300dpi.jpg" alt="" width="190" height="305"/>
+      </div>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="pu1047"><!-- group -->
+     <div class="shadow grpelem" id="u1047"><!-- simple frame -->
+      <div class="_u1047 f3s_top" id="_u1047-f3s_top"></div>
+      <div class="_u1047 f3s_mid" id="_u1047-f3s_mid"></div>
+      <div class="_u1047 f3s_bot" id="_u1047-f3s_bot"></div>
+     </div>
+     <div class="shadow grpelem" id="u1043"><!-- simple frame -->
+      <div class="_u1043 f3s_top" id="_u1043-f3s_top"></div>
+      <div class="_u1043 f3s_mid" id="_u1043-f3s_mid"></div>
+      <div class="_u1043 f3s_bot" id="_u1043-f3s_bot"></div>
+     </div>
+     <div class="shadow grpelem" id="u1037"><!-- simple frame -->
+      <div class="_u1037 f3s_top" id="_u1037-f3s_top"></div>
+      <div class="_u1037 f3s_mid" id="_u1037-f3s_mid"></div>
+      <div class="_u1037 f3s_bot" id="_u1037-f3s_bot"></div>
+     </div>
+     <div class="rgba-background clearfix grpelem" id="u976"><!-- column -->
+      <div class="position_content" id="u976_position_content">
+       <a class="anchor_item colelem" id="media"></a>
+       <div class="clearfix colelem" id="u1038-4"><!-- content -->
+        <p>Media</p>
+       </div>
+       <div class="clearfix colelem" id="pu1044-4"><!-- group -->
+        <div class="clearfix grpelem" id="u1044-4"><!-- content -->
+         <p>The Shade Trilogy on Facebook</p>
+        </div>
+        <div class="clearfix grpelem" id="u1048-4"><!-- content -->
+         <p>Matthew Tallman on Goodreads</p>
+        </div>
+       </div>
+       <div class="clearfix colelem" id="pu1041"><!-- group -->
+        <div class="clearfix grpelem" id="u1041"><!-- group -->
+         <div class="grpelem" id="u1045"><!-- custom html -->
+          <div class="fb-page" data-href="https://www.facebook.com/TheShadeBook/timeline" data-width="490" data-height="550" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/TheShadeBook/timeline"><a href="https://www.facebook.com/TheShadeBook/timeline">The Shade Trilogy</a></blockquote></div></div>
+</div>
+        </div>
+        <div class="grpelem" id="u1042"><!-- simple frame --></div>
+       </div>
+      </div>
+     </div>
+    </div>
+    <div class="verticalspacer"></div>
+    <div class="rgba-background rounded-corners colelem" id="u488"><!-- simple frame --></div>
+    <div class="colelem" id="u1019"><!-- custom html -->
+     <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+</div>
    </div>
-   <div class="verticalspacer"></div>
-   <div class="rgba-background rounded-corners colelem" id="u488"><!-- simple frame --></div>
-  </div>
-  <div class="preload_images">
-   <img class="preload" src="images/u253-r.png" alt=""/>
-   <img class="preload" src="images/u253-a.png" alt=""/>
-   <img class="preload" src="images/u245-r.png" alt=""/>
-   <img class="preload" src="images/u245-a.png" alt=""/>
-   <img class="preload" src="images/u316-r.png" alt=""/>
-   <img class="preload" src="images/u316-a.png" alt=""/>
-   <img class="preload" src="images/u278-r.png" alt=""/>
-   <img class="preload" src="images/u278-a.png" alt=""/>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
