--- a/the-shade.html
+++ b/the-shade.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.watch.js", "the-shade.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "the-shade.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -11,17 +11,12 @@
   <title>The Shade</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?426517801"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3948746906"/>
-  <link rel="stylesheet" type="text/css" href="css/the-shade.css?3931910125" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/the-shade.css?4112523222" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
-var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/double-pica-small-caps:n4:all.js" type="text/javascript">\x3C/script>');
-</script>
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?4241844378" type="text/javascript"></script>
   <![endif]-->
@@ -29,79 +24,15 @@ var __adobewebfontsappname__ = "muse";
  <body>
 
   <div class="clearfix" id="page"><!-- column -->
-   <div class="clearfix colelem" id="ppu459"><!-- group -->
-    <div class="clearfix grpelem" id="pu459"><!-- group -->
-     <div class="clearfix grpelem" id="u459"><!-- group -->
-      <div class="clip_frame grpelem" id="u460"><!-- image -->
-       <img class="block" id="u460_img" src="images/goodreads_icon_30x30.png" alt="" width="30" height="30"/>
-      </div>
-     </div>
-     <div class="clearfix grpelem" id="u466-4"><!-- content -->
-      <p>GOODREADS</p>
-     </div>
-     <a class="nonblock nontext grpelem" id="u480" href="https://www.goodreads.com/author/show/7847803.Matthew_Tallman"><!-- simple frame --></a>
-    </div>
-    <div class="clearfix grpelem" id="u449"><!-- group -->
-     <div class="clip_frame grpelem" id="u440"><!-- image -->
-      <img class="block" id="u440_img" src="images/fb-f-logo__blue_29.png" alt="" width="29" height="29"/>
-     </div>
-     <div class="clearfix grpelem" id="u450-4"><!-- content -->
-      <p>FACEBOOK</p>
-     </div>
-    </div>
-    <a class="nonblock nontext grpelem" id="u479" href="https://www.facebook.com/TheShadeBook?pnref=lhc"><!-- simple frame --></a>
-   </div>
-   <div class="clearfix colelem" id="u481"><!-- group -->
-    <div class="clip_frame grpelem" id="u482"><!-- image -->
-     <img class="block" id="u482_img" src="images/icon.png" alt="" width="101" height="101"/>
-    </div>
-    <nav class="MenuBar clearfix grpelem" id="menuu240"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u248"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u251" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u253" alt="Home" src="images/blank.gif"/><!-- state-based BG images --></a>
-     </div>
-     <div class="MenuItemContainer clearfix grpelem" id="u241"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u244" href="the-shade-trilogy.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u245" alt="The Shade Trilogy" src="images/blank.gif"/><!-- state-based BG images --></a>
-      <div class="SubMenu  MenuLevel1 clearfix" id="u242"><!-- vertical box -->
-       <ul class="SubMenuView clearfix colelem" id="u243"><!-- vertical box -->
-        <li class="MenuItemContainer clearfix colelem" id="u332"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u333" href="the-shade.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u335-4"><!-- rasterized frame --><div id="u335-4_clip"><img id="u335-4_img" alt="The Shade" width="108" height="33" src="images/u335-4.png"/></div></div></a></li>
-        <li class="MenuItemContainer clearfix colelem" id="u344"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u345" href="the-corrupt.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u347-4"><!-- rasterized frame --><div id="u347-4_clip"><img id="u347-4_img" alt="The Corrupt" width="126" height="33" src="images/u347-4.png"/></div></div></a></li>
-        <li class="MenuItemContainer clearfix colelem" id="u351"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u354" href="the-forgotten.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u356-4"><!-- rasterized frame --><div id="u356-4_clip"><img id="u356-4_img" alt="The Forgotten" width="144" height="33" src="images/u356-4.png"/></div></div></a></li>
-       </ul>
-      </div>
-     </div>
-     <div class="MenuItemContainer clearfix grpelem" id="u313"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u314" href="short-stories.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u316" alt="Short Stories" src="images/blank.gif"/><!-- state-based BG images --></a>
-     </div>
-     <div class="MenuItemContainer clearfix grpelem" id="u275"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u276" href="about-the-author.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u278" alt="About the Author" src="images/blank.gif"/><!-- state-based BG images --></a>
-     </div>
-    </nav>
-   </div>
    <div class="rgba-background clearfix colelem" id="u494"><!-- column -->
     <div class="shadow clip_frame colelem" id="u506"><!-- image -->
      <img class="block" id="u506_img" src="images/ts%20fb%20cover.jpg" alt="" width="720" height="266"/>
     </div>
-    <div class="clearfix colelem" id="pu326"><!-- group -->
-     <div class="shadow clip_frame grpelem" id="u326"><!-- image -->
-      <img class="block" id="u326_img" src="images/the_shade.jpg" alt="" width="313" height="500"/>
-     </div>
-     <div class="rgba-background clearfix grpelem" id="u495-4"><!-- content -->
-      <p id="u495-2">James Langley's life is over. After an automobile accident leaves him comatose, James' body lies vulnerable in a hospital bed. However, his mind is lost, drifting between life and death, into The Shade. Trapped in a world shrouded by the unknown, he meets Virgil, a mysterious stranger that informs him that his car wreck was no accident; that the man responsible has imprisoned them both, intent on keeping them there. Together they must race against time to get James back to his body in the real world before he becomes the next victim of a malevolent psychopath. Enter the world of The Shade, where the boundaries of the human psyche are pushed to their limits and survival is not guaranteed. A place where death isn't the end, but only the beginning.</p>
-     </div>
+    <div class="rgba-background clearfix colelem" id="u495-4"><!-- content -->
+     <p id="u495-2">James Langley's life is over. After an automobile accident leaves him comatose, James' body lies vulnerable in a hospital bed. However, his mind is lost, drifting between life and death, into The Shade. Trapped in a world shrouded by the unknown, he meets Virgil, a mysterious stranger that informs him that his car wreck was no accident; that the man responsible has imprisoned them both, intent on keeping them there. Together they must race against time to get James back to his body in the real world before he becomes the next victim of a malevolent psychopath. Enter the world of The Shade, where the boundaries of the human psyche are pushed to their limits and survival is not guaranteed. A place where death isn't the end, but only the beginning.</p>
     </div>
    </div>
    <div class="verticalspacer"></div>
-   <div class="colelem" id="u488"><!-- simple frame --></div>
-  </div>
-  <div class="preload_images">
-   <img class="preload" src="images/u253-r.png" alt=""/>
-   <img class="preload" src="images/u253-a.png" alt=""/>
-   <img class="preload" src="images/u245-r.png" alt=""/>
-   <img class="preload" src="images/u245-a.png" alt=""/>
-   <img class="preload" src="images/u316-r.png" alt=""/>
-   <img class="preload" src="images/u316-a.png" alt=""/>
-   <img class="preload" src="images/u278-r.png" alt=""/>
-   <img class="preload" src="images/u278-a.png" alt=""/>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
@@ -111,7 +42,6 @@ var __adobewebfontsappname__ = "muse";
    window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
   <script src="scripts/museutils.js?4136605575" type="text/javascript"></script>
-  <script src="scripts/jquery.musemenu.js?4009181048" type="text/javascript"></script>
   <script src="scripts/jquery.watch.js?172956391" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -121,7 +51,6 @@ for(var c=$(".version"),d=0;d<Muse.assets.required.length;){var f=Muse.assets.re
 typeof $!="undefined"?Muse.assets.required.splice(d,1):d++;break;default:throw Error("Unsupported file type: "+g);}}c.remove();if(Muse.assets.outOfDate.length||Muse.assets.required.length)c="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",(d=location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi))&&Muse.assets.outOfDate.length&&(c+="\nOut of date: "+Muse.assets.outOfDate.join(",")),d&&Muse.assets.required.length&&(c+="\nMissing: "+Muse.assets.required.join(",")),alert(c)})()})();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
-Muse.Utils.initWidget('.MenuBar', function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
